# vertica-getdatafromnode

./: CMakeLists.txt  README.MD
src/: GetDataFromNode.cpp
